# dreiser

./: .env.example  .gitattributes  .gitignore  QUICKSTART.md  README.md  START_FRONTEND.bat  deploy.ps1  deploy.sh  docker-compose.yml  init_db.sql  quick-start.ps1  quick-start.sh  stop.sh
backend/: .dockerignore  Dockerfile  alembic.ini  celerybeat-schedule  create_user.py  init_db.py  pytest.ini  requirements.txt
backend/c_engine/: .gitignore  BUILD_AND_RUN.md  CMakeLists.txt  Dockerfile  Makefile  README.md  STRATEGIES_AND_RISK_V2.md
backend/c_engine/config/: API_KEYS.env  API_KEYS_8_EXCHANGES.md  API_KEYS_HOWTO.md  SECURITY_CRITICAL_READ_NOW.md  engine.json  strategies.json
backend/c_engine/src/: main.c  main.h
backend/c_engine/src/data/: price_cache.c  price_cache.h  spsc_ring.c  spsc_ring.h
backend/c_engine/src/execution/: virtual_portfolio.c  virtual_portfolio.h
backend/c_engine/src/ipc/: shared_memory.c  shared_memory.h
backend/c_engine/src/network/: binance_ws.c  binance_ws.h  bitfinex_ws.c  bitfinex_ws.h  bitget_ws.c  bitget_ws.h  bybit_ws.c  bybit_ws.h  deribit_ws.c  deribit_ws.h  exchange.c  exchange.h  gateio_ws.c  gateio_ws.h  huobi_ws.c  huobi_ws.h  kucoin_ws.c  kucoin_ws.h  mexc_ws.c  mexc_ws.h  okx_ws.c  okx_ws.h  websocket.c  websocket.h
backend/c_engine/src/risk/: hft_risk_manager.c  hft_risk_manager.h  risk_manager.c  risk_manager.h
backend/c_engine/src/strategies/: cross_exchange.c  cross_exchange.h  funding_rate.c  funding_rate.h  spot_futures_arbitrage.c  spot_futures_arbitrage.h  statistical_arbitrage.c  statistical_arbitrage.h  triangular.c  triangular.h
backend/c_engine/src/utils/: memory_pool.c  memory_pool.h  timestamp.c  timestamp.h
docs/: 8_EXCHANGES_READY.md  AI_LEARNING_IMPROVEMENTS_V2.md  AI_LEARNING_NOTES_ANALYSIS.md  API_KEYS_COMPROMISED_SUMMARY.md  API_KEYS_SETUP_GUIDE.md  AUDIT_REPORT.md  BACKEND_FILTER_V1.3.15.md  BINANCE_API_GUIDE.md  BUGFIX_AND_BALANCE_V1.3.08.md  CALIBRATION_V1.3.11_CONTEXT_AND_FLEXIBILITY.md  CALIBRATION_V1.3.12_EXHAUSTION_AND_FILTERS.md  CASCADE_ANALYSIS_V1.3.13.md  CASCADE_LOSSES_V1.3.12_ANALYSIS.md  CASCADE_LOSSES_V1.3.14_ANALYSIS.md  CLEANUP_V1_COMPLETED.md  CRYPTOPANIC_SETUP.md  DEEP_ANALYSIS_WINRATE_PROBLEM.md  DEPLOYMENT_SCRIPTS.md  DOCKER_REBUILD_COMPLETE.md  DRAIZER_V2_FINAL_COMPACT.md  END_OF_V1.md  ENTRY_VOLUME_CONTEXT_V1.3.13.md  FEATURES_CHANGELOG.md  FINAL_STATUS_V1.2.0.md  FRONTEND_V2_READY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.txt  IMPROVEMENTS_SUMMARY_RU.md  MEXC_MAKER_ARBITRAGE_PLAN.md  MIGRATION_TELEGRAM_TO_CRYPTOPANIC.md  MOMENTUM_ACCELERATION_V1.3.10.md  MULTI_EXCHANGE_COMPLETE.md  NEW_FEATURES_V1.2.0.md  README_V1.2.0.md  (+30 more)
(+106 files in other folders)
